// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChromeNavGroup should not render nav item group 1`] = `
<div>
  <div />
</div>
`;

exports[`ChromeNavGroup should render nav item group 1`] = `
<div>
  <div>
    <section
      aria-labelledby="Foo"
      class="pf-v6-c-nav__section chr-c-section-nav"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="Foo"
      >
        <div>
          Foo
        </div>
      </h2>
      <ul
        class="pf-v6-c-nav__list chr-c-section-nav"
        role="list"
      />
    </section>
  </div>
</div>
`;

exports[`ChromeNavGroup should render nav item group with icon 1`] = `
<div>
  <div>
    <section
      aria-labelledby="Foo"
      class="pf-v6-c-nav__section chr-c-section-nav"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="Foo"
      >
        <div>
          <span
            class="pf-v6-c-icon pf-m-inline pf-m-sm pf-v6-u-mr-sm"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M507.73 109.1c-2.24-9.03-13.54-12.09-20.12-5.51l-74.36 74.36-67.88-11.31-11.31-67.88 74.36-74.36c6.62-6.62 3.43-17.9-5.66-20.16-47.38-11.74-99.55.91-136.58 37.93-39.64 39.64-50.55 97.1-34.05 147.2L18.74 402.76c-24.99 24.99-24.99 65.51 0 90.5 24.99 24.99 65.51 24.99 90.5 0l213.21-213.21c50.12 16.71 107.47 5.68 147.37-34.22 37.07-37.07 49.7-89.32 37.91-136.73zM64 472c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M29.929 6.514a.998.998 0 0 0-1.6-.258l-5.036 5.036c-.713.713-1.873.713-2.586 0s-.713-1.873 0-2.586l5.036-5.036a1 1 0 0 0-.258-1.6A9.9 9.9 0 0 0 20.999.999c-5.514 0-10 4.486-10 10 0 1.053.166 2.09.494 3.092l-9.166 9.168a4.541 4.541 0 0 0 0 6.414c.884.884 2.046 1.326 3.207 1.326s2.323-.442 3.207-1.326l9.167-9.167A9.913 9.913 0 0 0 21 21c5.514 0 10-4.486 10-10 0-1.565-.36-3.074-1.071-4.486ZM21 19a7.959 7.959 0 0 1-2.977-.579 1.004 1.004 0 0 0-1.08.221l-9.617 9.617a2.539 2.539 0 0 1-3.586 0 2.54 2.54 0 0 1 0-3.586l9.617-9.617c.283-.283.37-.708.221-1.08a7.959 7.959 0 0 1-.579-2.977c0-4.411 3.589-8 8-8 .771 0 1.527.11 2.258.328l-3.965 3.965c-.723.723-1.122 1.685-1.122 2.707s.398 1.984 1.122 2.707a3.832 3.832 0 0 0 5.414 0l3.965-3.965c.218.731.328 1.486.328 2.258 0 4.411-3.589 8-8 8ZM8.25 24.999a1.25 1.25 0 1 1-2.5 0 1.25 1.25 0 0 1 2.5 0Z"
                  />
                </svg>
              </svg>
            </span>
          </span>
          Foo
        </div>
      </h2>
      <ul
        class="pf-v6-c-nav__list chr-c-section-nav"
        role="list"
      />
    </section>
  </div>
</div>
`;

exports[`ChromeNavGroup should render nav item group with items 1`] = `
<div>
  <div>
    <section
      aria-labelledby="Foo"
      class="pf-v6-c-nav__section chr-c-section-nav"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="Foo"
      >
        <div>
          Foo
        </div>
      </h2>
      <ul
        class="pf-v6-c-nav__list chr-c-section-nav"
        role="list"
      >
        <li
          class="pf-v6-c-nav__item chr-c-navigation__item"
          data-ouia-component-id="Sub Item"
          data-ouia-component-type="PF6/NavItem"
          data-ouia-safe="true"
        >
          <a
            class="pf-v6-c-nav__link chr-c-navigation__item"
            data-quickstart-id="foo"
            data-testid="router-link"
            href="/foo"
            itemid="/foo"
          >
            <span
              class="pf-v6-c-nav__link-text"
            >
              Sub Item
               
            </span>
          </a>
        </li>
      </ul>
    </section>
  </div>
</div>
`;
